contour/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: bluegreen-httpproxy
  namespace: default
spec:
  virtualhost:
    fqdn: bluegreen.tanzu-altair.com
  routes:
    - services:
        - name: httpd-sample-svc
          port: 8080
          weight: 60
        - name: nginx-sample-svc
          port: 8080
          weight: 40
