contour/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  service.beta.kubernetes.io/aws-load-balancer-internal: "true"  
spec:
  rules:
  - host: harbor.internal.tanzu
    http:
      paths:
      - backend:
          service:
            name: harbor-portal
            port:
              number: 443
        path: /
        pathType: Exact
